# CG-With-Frame-Dandelion

./: README.md
1.2/: modifications.cpp
1.3/: modifications.cpp
2.1/: modifications.cpp
2.13/: modifications.cpp
2.14/: modifications.cpp
2.15/: modifications.cpp
2.2/: modifications.cpp
2.3/: modifications.cpp
2.8/: modifications.cpp
CG/optimizer/: CMakeLists.txt  main.cpp
src/: main.cpp
src/scene/: camera.cpp  object.cpp
src/ui/: toolbar.cpp
